[package]
name = "os"
version = "0.1.0"
edition = "2021"
default-run = "qemu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["kernel"]

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.5"

