[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.5"
embedded-graphics = "0.8.1"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
spin = "0.9.8"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

