[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
embedded-graphics = "0.8.1"
pc-keyboard = "0.5.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
pic8259 = "0.10.1"
bootloader_api = "0.11.5"
x86_64 = "0.14.11"
uart_16550 = "0.3.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

